--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "dist": "vue-cli-service build --target lib --name vue-components --dest dist packages/index.js --report",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "dll": "webpack -p --progress --config ./webpack.dll.conf.js"
+    "dll": "webpack -p --progress --config ./webpack.dll.conf.js",
+    "pack": "webpack -p --progress --config ./webpack.config.js"
   },
   "dependencies": {
     "ant-design-vue": "1.7.3",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -28,10 +30,13 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
+    "vue-loader-plugin": "^1.3.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10"
