--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "dll": "webpack -p --progress --config ./webpack.dll.conf.js",
-    "pack": "webpack -p --progress --config ./webpack.config.js"
+    "pack": "webpack -p --progress --config ./webpack.config.js",
+    "pack-inspect": "webpack -p --progress --config ./webpack.inspect.js"
   },
   "dependencies": {
     "ant-design-vue": "1.7.3",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "progress-bar-webpack-plugin": "1.11.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -32,13 +34,18 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "css-loader": "^2.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "vue-loader-plugin": "^1.3.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.0.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.10"
   }
 }
