--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "dist": "vue-cli-service build --target lib --name vue-components --dest dist packages/index.js --report",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "dll": "webpack -p --progress --config ./webpack.dll.conf.js",
-    "pack": "webpack -p --progress --config ./webpack.config.js",
-    "pack-inspect": "webpack -p --progress --config ./webpack.inspect.js"
+    "dll": "webpack -p --progress --config build/webpack.dll.conf.js",
+    "pack": "node build/gen.import.js && webpack -p --progress --config build/webpack.config.js",
+    "pack-inspect": "webpack -p --progress --config build/webpack.inspect.js"
   },
   "dependencies": {
     "ant-design-vue": "1.7.3",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "progress-bar-webpack-plugin": "1.11.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -36,12 +37,13 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^2.1.0",
     "eslint": "^6.7.2",
+    "eslint-loader": "2.2.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "mini-css-extract-plugin": "^0.4.1",
     "prettier": "^2.2.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
-    "mini-css-extract-plugin": "^0.4.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
